# flutter_mldsa

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/actions/integration-test/: action.yml
.github/actions/integration-test-wasm/: action.yml
.github/actions/publish-tagged-commit/: action.yml
.github/actions/pubspec-version-update/: action.yml
.github/actions/setup-dependencies/: action.yml
.github/actions/tag-work/: action.yml
.github/actions/update-changelog/: action.yml
.github/workflows/: master-integration-test.yml  publish-tagged.yml  pull-request-workflow.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  Makefile  README.md  pubspec.yaml
example/android/app/: build.gradle
example/integration_test/: keygen_test.dart  master_integration_test.dart  master_integration_test_web.dart  signing_test.dart  simple_test.dart  verification_test.dart
example/ios/Runner/: Info.plist
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: flutter_mldsa.podspec
lib/: flutter_mldsa.dart
linux/: CMakeLists.txt
macos/: flutter_mldsa.podspec
rust/: Cargo.toml  build.rs
rust/src/api/: ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs  mod.rs  mode.rs  simple.rs  tests.rs
scripts/: prepare-cred.sh  pubspec-version-control.sh  setup-and-test.sh  setup.sh  tag-work.sh  update-changelog.sh
windows/: CMakeLists.txt
(+25 files in other folders)
