[package]
name = "flutter_mldsa"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
hybrid-array = "0.3.1"
ml-dsa = "0.0.4"
rand = "0.8"
anyhow = "1.0.98"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
